--- a/Bipoc/package.json
+++ b/Bipoc/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/secret-manager": "^3.10.0",
     "connect-mongo": "^4.4.1",
     "connect-mongodb-session": "^3.0.0",
     "crypto": "^1.0.1",
