Fix compiler issues

--- a/Bipoc/package.json
+++ b/Bipoc/package.json
@@ -1,30 +1,47 @@
 {
-  "name": "bipoc",
+  "engines": {
+    "node": "16.x.x"
+  },
+
+  "name": "datadesignpattern",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "tsc && node ./ts_built/bipoc-server.js",
-    "start": "nodemon -e ts  --exec \"npm run compile\"",
-    "gcp-build": "tsc -p"
+    "compile": "tsc --project tsconfig.json",
+    "package": "cp -r package.json ./lib",
+    "css": "mkdirp ./lib/css && cp -r ./css/* ./lib/css",
+    "images": "mkdirp ./lib/images && cp -r images/* ./lib/images",
+    "hbs": "mkdirp ./lib/render-templates && cp -r render-templates/* ./lib/render-templates",
+    "start": "node ./lib/bipoc-server.js",
+    "gcp-build": "npm run build-target",
+    "delete": "rm -rf lib",
+    "build": "npm run delete && npm run compile && npm run package && npm run css && npm run images && npm run hbs && npm start",
+    "build-target": "npm run compile && npm run package && npm run css && npm run images && npm run hbs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/logging": "^9.5.5",
     "@google-cloud/secret-manager": "^3.10.0",
     "connect-mongo": "^4.4.1",
     "connect-mongodb-session": "^3.0.0",
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
+    "express-handlebars-sections": "^1.0.1",
     "express-session": "^1.17.2",
+    "mkdirp": "^1.0.4",
+    "mongodb": "^4.1.1",
     "mongoose": "^5.13.7",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "systemjs": "^6.10.3",
-    "tslib": "^2.3.1"
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.5"
   },
   "type": "module",
   "devDependencies": {
